--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
             cd Sypher
             screen -X -S Sypher quit
             git pull
+            pip3 install -r requirements.txt
             bash start.sh
             
